syntax = "proto3";

package proto;
option go_package = "proto/";
import "proto/depend.proto";

service HelloWorld {
  rpc hello (HelloRequest) returns (HelloResponse) {}
  // 双向流
  rpc DoubleStreamHello (stream HelloStreamRequest) returns (stream HelloStreamResponse) {}
}

message HelloRequest{
  // @gotags:json:"name-1"
  string name = 1;
}

message HelloResponse{
  string message = 1;
  Bot bot = 2;
}

message HelloStreamRequest{
  string name = 1;
}

message HelloStreamResponse{
  string name = 1;
}